tests/NormalTests/paczka1/small_fuzzy/42037621.err
Error in line 3: A732 A283 43,4
Error in line 5: B5WKAt S36 46,8
Error in line 9: ByBbGbYmKr A551 16,8
Error in line 4: A732 A551 41,3
Error in line 10: ByBbGbYmKr A283 95,9
